# poc_precompiled_headers

./: CMakeLists.txt  force_pch.sh  originateBuild.sh
includes/: union_find.hpp
src/: main.cpp  union_find.cpp
